--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-# ??????? ??? ??????????? ? ???? ??????
-spring.datasource.driver-class-name=org.h2.Driver
-# ???? ??????????? ? ??????? jdbc:{???????? ????????}:{??? ????????}:{????}. ? ?????? ?????? ?????????? ? ???? db.mv.db ? ????? ???????
-spring.datasource.url=jdbc:h2:file:./db
-# ??? ????????????, ???????????
-spring.datasource.username=sa
-# ???????????? ??? ??????
-spring.datasource.password=
-# ???????, ????? JPA ?????, ??? ?? ???????? ? ??
-spring.jpa.database-platform= org.hibernate.dialect.H2Dialect
-# ??????? ????? ? ???????? ??? ?????????????. ????????? ??????? ??? ??????? ????????
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/lessonThreeDb
+spring.datasource.username=user
+spring.datasource.password=secret
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+server.port=8090
+
+logging.level.sql=debug
